@@ -8,7 +8,9 @@
 
 Tcl_Obj *Cookfs_FsindexToObject(Cookfs_Fsindex *i);
 Cookfs_Fsindex *Cookfs_FsindexFromObject(Cookfs_Fsindex *i, Tcl_Obj *o);
+#ifdef COOKFS_USECPAGES
 Cookfs_Fsindex *Cookfs_FsindexFromPages(Cookfs_Fsindex *fsindex, Cookfs_Pages *pages);
+#endif /* COOKFS_USECPAGES */
 
 #endif /* COOKFS_USECFSINDEX */
 
