@@ -1,5 +1,6 @@
 2024-05-26 Konstantin Kushnir <chpock@gmail.com>
 	* Add tests for writer
+	* Fix build without c-pages, but with c-fsindex
 
 2024-05-25 Konstantin Kushnir <chpock@gmail.com>
 	* Add support for writer in C
